# minesweeper-env

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  requirements.txt
.github/workflows/: pytest-ci.yml
app/: app.py
src/: minesweeper.py
tests/: test_minesweeper.py
