[project]
name = "minesweeper-env"
version = "0.1.0"
description = ""
authors = [
    {name = "Celia ZHANG",email = "celiazhang349@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)"
]

[tool.poetry]
packages = [{include = "minesweeper_env", from = "src"}]


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.5"
isort = "^6.0.1"
black = "^25.1.0"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
